# uwu-h

./: Cargo.toml  PKGBUILD  uwu-1.0.0-1-x86_64.pkg.tar.zst
pkg/uwu/: .BUILDINFO  .MTREE  .PKGINFO
pkg/uwu-h/: .BUILDINFO  .MTREE  .PKGINFO
pkg/uwu-h-debug/: .BUILDINFO  .MTREE  .PKGINFO
src/: main.rs
src/ascii_art/: mod.rs
src/aur/: mod.rs
src/cli/: install.rs  mod.rs  remove.rs  search.rs  stats.rs  update.rs
src/diff/: mod.rs
src/pacman/: mod.rs
src/uwu-1.0.0/: uwu-1.0.0-1-x86_64.pkg.tar.zst
src/uwu-1.0.0/pkg/uwu/: .BUILDINFO  .MTREE  .PKGINFO
src/uwu-1.0.0/src/cli/: search.rs
src/uwu-h-1.0.0/: Cargo.toml  PKGBUILD
src/uwu-h-1.0.0/src/: main.rs
src/uwu-h-1.0.0/src/cli/: mod.rs
src/uwu-h-1.0.0/src/uwu-1.0.0/src/cli/: install.rs  remove.rs
