[package]
name = "uwu-h"
version = "1.1.0"
authors =  ["Luna"]
edition = "2021"

[dependencies]
clap = "4.5.9"
colored = "2.1.0"
ansi_term = "0.12.1"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dirs = "5.0.1"
fs_extra = "1.3.0"
dialoguer = "0.11.0"
