[package]
name = "uwu-h"
version = "1.0.0"
authors =  ["Luna"]
edition = "2021"

[dependencies]
clap = "3.0"
colored = "2.1.0"
ansi_term = "0.12.1"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dirs = "5.0.1"
